refactor: refatoração geral na utilização de MethodResponse no projeto.