@@ -1,5 +1,6 @@
 package com.camp.manager.application.usecases;
 
+import com.camp.manager.domain.entity.utils.MethodResponse;
 import com.camp.manager.domain.enums.TamanhoCamiseta;
 import org.springframework.stereotype.Service;
 
@@ -8,13 +9,14 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
-public class BuscarTamanhosCamisaUC implements UseCase<Void, List<String>> {
+public class BuscarTamanhosCamisaUC implements UseCase<Void, MethodResponse<List<String>>> {
 
     @Override
-    public List<String> execute(Void input) {
-        return Arrays
+    public MethodResponse<List<String>> execute(Void input) {
+        List<String> tamanhos = Arrays
                 .stream(TamanhoCamiseta.values())
                 .map(TamanhoCamiseta::getValor)
-                .collect(Collectors.toList());
+                .toList();
+        return new MethodResponse<>(200, "Tamanhos de camisa encontrados com sucesso!", tamanhos);
     }
 }
